# reactos

dll/: CMakeLists.txt
dll/dui/: CMakeLists.txt
dll/dui/dui70/: CMakeLists.txt  DirectUI.cpp  dui70.rc
